# JupyterLab

./: .gitignore  PhoneScenePredict.ipynb  TransFlowChart.html  Z-Score.ipynb  apdu_deal.ipynb  non_call_1.csv  phone_scence_model.keras  sessionkey.html  temp.html  temp.ipynb  test_database.csv
.figma/11_11/: index.jsx  index.module.scss
.figma/5_56/: index.jsx  index.module.scss
.trae/documents/: 剪刀石头布游戏技术架构文档.md
AI/: KIMI-api.ipynb
DL/: main.py  pyproject.toml
Gate_classify/: README.md  config.json  data_augmentation.py  main.py  pyproject.toml  test_system.py
MCP/: main.py
NTAG_APP/: settings.gradle.kts
NTAG_APP/app/: build.gradle.kts
QtFluent/: main.py
TemplateApp/: pyproject.toml
TemplateApp/api/: API.py
TemplateApp/common_ui/: nav_bar.py
TemplateApp/components/: theme_manager.py
TemplateApp/page/: base_page.py  client_page.py  server_page.py
Template_app/: main.py
Template_app/common_ui/: title_bar.py
Template_app/components/: constants.py  (+1 more)
ala/: ACML.py
config/: config.json
data/: Corr_content.csv
flash/: README.md  main.py  pyproject.toml
mcp_app/: main.py  temp.ipynb
mydoc/: README.md  deploy_all.py  deploy_config.json  main.py  pyproject.toml
others/: follow_simulation_distance_only.py  follow_simulation_pyqt6.py  mermaid.md  十六进制数组处理.ipynb  多项式回归.ipynb  门禁协议帧.html  颜色生成器.ipynb
tkinter/: KIMI-api.ipynb
tools/parameter_Chart/: README.md  main.py  pyproject.toml
tools/parameter_Chart/CSV/: (COM4) 20250604_163101.xlsx  [COM4] 20250604_163101.csv
tools/parameter_Chart/HTML/: Auth_bar.html  Master_bar.html  Master_line.html  NLOS_line.html  Slave_line.html  Trans_bar.html
(+299 files in other folders)
