[tool.poetry]
name = "flash-tool"
version = "0.1.0"
description = "A PyQt6-based firmware flashing tool"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyqt6 = "^6.0.0"
pyserial = "^3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"