[project]
name = "parameter-chart"
version = "0.1.0"
description = "CSV/Excel文件参数可视化工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyqt6>=6.5.0",
    "pyqt6-webengine>=6.5.0",
    "pyecharts>=2.0.0",
    "snapshot-phantomjs>=0.0.1",
    "openpyxl>=3.1.0",  # 用于Excel文件读取
]
