[project]
name = "parameter-chart"
version = "0.1.0"
description = "CSV/Excel file parameter visualization tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyqt6>=6.5.0",
    "pyqt6-webengine>=6.5.0",
    "pyecharts>=2.0.0",
    "snapshot-phantomjs>=0.0.1",
    "openpyxl>=3.1.0", # For Excel file reading
    "nuitka>=2.7.6",
    "imageio>=2.37.0",
]
